--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/bgmacaque/applicationmusic/zipball/master">Download this project as a .zip file</a>
               <a class="tar_download_link" href="https://github.com/bgmacaque/applicationmusic/tarball/master">Download this project as a tar.gz file</a>
+              <a href="./doc/index.html">Documentation</a>
             </section>
         </header>
     </div>
