--- a/index.html
+++ b/index.html
@@ -33,14 +33,17 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to ApplicationMusic Pages.</h3>
+<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to ApplicationMusic Page.</h3>
 
 
 
-
+<h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>(<a href="https://github.com/AdoPi" class="user-mention">@AdoPi</a>)</p>
+</h3>
+<p><a href="https://github.com/AdoPi" class="user-mention">@AdoPi</a>
+   <a href="https://github.com/AdoPi" class="user-mention">@Neressea</a>
+   <a href="https://github.com/AdoPi" class="user-mention">@Sehsyha</a>
+</p>
 
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
