Fix link issues in index.html

--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 </h3>
-<p><a href="https://github.com/AdoPi" class="user-mention">@AdoPi</a>
-   <a href="https://github.com/AdoPi" class="user-mention">@Neressea</a>
-   <a href="https://github.com/AdoPi" class="user-mention">@Sehsyha</a>
+<p>
+   <a href="https://github.com/AdoPi" class="user-mention">@AdoPi</a>
+   <a href="https://github.com/Neressea" class="user-mention">@Neressea</a>
+   <a href="https://github.com/Sehsyha" class="user-mention">@Sehsyha</a>
 </p>
 
 <h3>
